css/pages/flickr-map.scss
---
---

div#yeahyeahyeahs {
  opacity: 0.1;
  pointer-events: none;
  transition: opacity 1s;
  z-index: 9999;
}

.leaflet-control-attribution {
  text-align: right;
  background-color: #0009 !important;
  color: #aaa;
  border-top-left-radius: 4px;
  padding: 2px 4px;

  a {
    color: deepskyblue;
  }

  span#embiggen {
    float: right;
    font-size: 2.1em;
    margin-left: 4px;

    a {
      color: skyblue;
    }
  }
}

a.marker-photo-link {
  text-align: center;
  width: 10vw;
  display: inline-block;

  &:hover span.marker-photo-date,
  &:hover span.marker-photo-title {
    text-decoration: underline;
  }

  span.marker-photo-date,
  span.marker-photo-title {
    display: inline-block;
    width: 100%;
  }

  span.marker-photo-title {
    margin-top: 4px;
    color: #fff;
    font-size: 1.2em;
    font-weight: bold;
  }

  span.marker-photo-date {
    color: #eee;
    font-size: 1em;
  }
}

.leaflet-popup-content-wrapper,
.leaflet-popup-tip {
  background-color: #111e;
  color: #eee;
}

.leaflet-marker-icon {
  border-radius: 25%;
  opacity: 0.8;
}

